test/error/highz0_highz1.sv
module top;
    wire (highz0, highz1) x;
endmodule
